[tool.poetry]
name = "reading-patterns"
version = "0.1.0"
description = ""
authors = ["Abtin Salahshor <abtin.salahshor@bonniernews.se>"]

[tool.poetry.dependencies]
python = "^3.7.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
numpy = "^1.20.1"
sklearn = "^0.0"
datetime = "^4.3"
pandas = "^1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
